# libvector

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  main.c
src/: CMakeLists.txt  complex.c  complex.h  derivative.c  derivative.h  matrix.c  matrix.h  probability.c  probability.h  quaternion.h  statistics.c  statistics.h  types.h  vector.c  vector.h
test/: CMakeLists.txt  test.c  test_complex_basics.c  test_matrix_basics.c  test_vector_basics.c
